测试guava关于布隆过滤器的误判率以及基于计数器的计数器的布隆过滤器支持remove操作

--- a/pom.xml
+++ b/pom.xml
@@ -15,4 +15,17 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>29.0-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baqend</groupId>
+            <artifactId>bloom-filter</artifactId>
+            <version>1.0.7</version>
+        </dependency>
+    </dependencies>
+
 </project>
